--- a/dosen/input_nilai_p3.html
+++ b/dosen/input_nilai_p3.html
@@ -204,107 +204,107 @@
         </header>
         <!--  Header End -->
       
-
       <div class="container-fluid">
         <h6 class="right-aligned" style="float: right">
-          <a href="index.html">Home Dosen</a> / <a href="">Penilaian Mahasiswa Bimbingan</a> / Proyek 3
+            <a href="index.html">Home Dosen</a> / <a href="">Penilaian Mahasiswa Bimbingan</a> / Proyek 3
         </h6>
         <h1 class="h3 mb-3"><b>Penilaian Mahasiswa Bimbingan</b></h1>
         <div class="container-fluid">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title fw-semibold mb-4">Penilaian Sidang Proyek 3</h5>
-              <div class="card">
+            <div class="card">
                 <div class="card-body">
-                  <form id="formInputBE">
-                    <h5 class="card-title fw-semibold mb-4">Penilaian Backend Developer</h5>
-                      <div class="row">
-                        <!-- NPM -->
-                        <div class="col-md-6">
-                          <div class="mb-3">
-                            <label for="inputNPMBE" class="form-label">NPM</label>
-                            <input type="text" class="form-control" id="inputNPMBE" placeholder="Masukkan NPM">
-                          </div>
+                    <h5 class="card-title fw-semibold mb-4">Penilaian Sidang Proyek 3</h5>
+                    <div class="card">
+                        <div class="card-body">
+                            <form id="formInputBE">
+                                <h5 class="card-title fw-semibold mb-4">Penilaian Backend Developer</h5>
+                                <div class="row">
+                                  <!-- NPM -->
+                                  <div class="col-md-6">
+                                    <div class="mb-3">
+                                      <label for="inputNPMBE" class="form-label">NPM</label>
+                                      <input type="text" class="form-control" id="inputNPMBE" placeholder="Masukkan NPM">
+                                    </div>
+                                  </div>
+                                  <!-- Tahun Akademik -->
+                                  <div class="col-md-6">
+                                      <div class="mb-3">
+                                        <label for="inputTahunAkademikBE" class="form-label">Tahun Akademik</label>
+                                        <input type="text" class="form-control" id="inputTahunAkademikBE" placeholder="Masukkan Tahun Akademik">
+                                        <div id="textHelp" class="form-text">*contoh : 2023-2024</div>
+                                      </div>
+                                  </div>
+                                </div>
+                                <!-- Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token -->
+                                <div class="mb-3">
+                                  <label for="inputNilaiBE1" class="form-label">Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token</label>
+                                  <input type="text" class="form-control" id="inputNilaiBE1" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                                </div>
+                                <!-- Package Dibuat Sendiri dan Semua Digunakan -->
+                                <div class="mb-3">
+                                  <label for="inputNilaiBE2" class="form-label">Package Dibuat Sendiri dan Semua Digunakan</label>
+                                  <input type="text" class="form-control" id="inputNilaiBE2" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                                </div>
+                                <!-- Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta -->
+                                <div class="mb-3">
+                                  <label for="inputNilaiBE3" class="form-label">Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta</label>
+                                  <input type="text" class="form-control" id="inputNilaiBE3" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                                </div>
+                                <!-- Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta -->
+                                <div class="mb-3">
+                                  <label for="inputNilaiBE4" class="form-label">Terintegrasi dengan <a href="">wa.my.id</a></label>
+                                  <input type="text" class="form-control" id="inputNilaiBE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
+                            </form>
+                            <hr class="mt-4">
+                            <form id="formInputFE">
+                                <h5 class="card-title fw-semibold mb-4 mt-4">Penilaian Front End Developer</h5>
+                                <div class="row">
+                                  <!-- NPM -->
+                                  <div class="col-md-6">
+                                    <div class="mb-3">
+                                      <label for="inputNPMFE" class="form-label">NPM</label>
+                                      <input type="text" class="form-control" id="inputNPMFE" placeholder="Masukkan NPM">
+                                    </div>
+                                  </div>
+                                  <!-- Tahun Akademik -->
+                                  <div class="col-md-6">
+                                      <div class="mb-3">
+                                        <label for="inputTahunAkademikFE" class="form-label">Tahun Akademik</label>
+                                        <input type="text" class="form-control" id="inputTahunAkademikFE" placeholder="Masukkan Tahun Akademik">
+                                        <div id="textHelp" class="form-text">*contoh : 2023-2024</div>
+                                      </div>
+                                  </div>
+                                </div>
+                                <!-- Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend -->
+                                <div class="mb-3">
+                                  <label for="inputNilaiFE1" class="form-label">Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend</label>
+                                  <input type="text" class="form-control" id="inputNilaiFE1" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                                </div>
+                                <!-- Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module -->
+                                <div class="mb-3">
+                                  <label for="inputNilaiFE2" class="form-label">Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module</label>
+                                  <input type="text" class="form-control" id="inputNilaiFE2" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                                </div>
+                                <!-- Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari gtmetrix.com -->
+                                <div class="mb-3">
+                                  <label for="inputNilaiFE3" class="form-label">Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari <a href="">gtmetrix.com</a></label>
+                                  <input type="text" class="form-control" id="inputNilaiFE3" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                                </div>
+                                <!-- Memakai Custom Domain pada GitHub Pages nya. -->
+                                <div class="mb-3">
+                                  <label for="inputNilaiFE4" class="form-label">Memakai Custom Domain pada GitHub Pages nya</label>
+                                  <input type="text" class="form-control" id="inputNilaiFE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
+                                </div>
+                                <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
+                            </form>
                         </div>
-                        <!-- Tahun Akademik -->
-                        <div class="col-md-6">
-                            <div class="mb-3">
-                              <label for="inputTahunAkademikBE" class="form-label">Tahun Akademik</label>
-                              <input type="text" class="form-control" id="inputTahunAkademikBE" placeholder="Masukkan Tahun Akademik">
-                              <div id="textHelp" class="form-text">*contoh : 2023-2024</div>
-                            </div>
-                        </div>
-                      </div>
-                      <!-- Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token -->
-                      <div class="mb-3">
-                        <label for="inputNilaiBE1" class="form-label">Semua Endpoint Berfungsi Termasuk Otorisasi dan Autentikasi Token</label>
-                        <input type="text" class="form-control" id="inputNilaiBE1" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                      </div>
-                      <!-- Package Dibuat Sendiri dan Semua Digunakan -->
-                      <div class="mb-3">
-                        <label for="inputNilaiBE2" class="form-label">Package Dibuat Sendiri dan Semua Digunakan</label>
-                        <input type="text" class="form-control" id="inputNilaiBE2" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                      </div>
-                      <!-- Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta -->
-                      <div class="mb-3">
-                        <label for="inputNilaiBE3" class="form-label">Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta</label>
-                        <input type="text" class="form-control" id="inputNilaiBE3" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                      </div>
-                      <!-- Semua Endpoint di GCF Memakai Package yang Dibuat dan Lokasi Server di Jakarta -->
-                      <div class="mb-3">
-                        <label for="inputNilaiBE4" class="form-label">Terintegrasi dengan <a href="">wa.my.id</a></label>
-                        <input type="text" class="form-control" id="inputNilaiBE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                      </div>
-                      <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
-                  </form>
-                  <hr class="mt-4">
-                  <form id="inputFormFE">
-                    <h5 class="card-title fw-semibold mb-4 mt-4">Penilaian Front End Developer</h5>
-                      <div class="row">
-                        <!-- NPM -->
-                        <div class="col-md-6">
-                          <div class="mb-3">
-                            <label for="inputNPMFE" class="form-label">NPM</label>
-                            <input type="text" class="form-control" id="inputNPMFE" placeholder="Masukkan NPM">
-                          </div>
-                        </div>
-                        <!-- Tahun Akademik -->
-                        <div class="col-md-6">
-                            <div class="mb-3">
-                              <label for="inputTahunAkademikFE" class="form-label">Tahun Akademik</label>
-                              <input type="text" class="form-control" id="inputTahunAkademikFE" placeholder="Masukkan Tahun Akademik">
-                              <div id="textHelp" class="form-text">*contoh : 2023-2024</div>
-                            </div>
-                        </div>
-                      </div>
-                      <!-- Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend -->
-                      <div class="mb-3">
-                        <label for="inputNilaiFE1" class="form-label">Semua JS Dirilis Versi di JSDelivr dari Semua JS Buatan Sendiri yang Dipakai Frontend</label>
-                        <input type="text" class="form-control" id="inputNilaiFE1" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                      </div>
-                      <!-- Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module -->
-                      <div class="mb-3">
-                        <label for="inputNilaiFE2" class="form-label">Pemanggilan JSDelivr Pada HTML yang Sudah Pasti Pakai Type Module</label>
-                        <input type="text" class="form-control" id="inputNilaiFE2" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                      </div>
-                      <!-- Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari gtmetrix.com -->
-                      <div class="mb-3">
-                        <label for="inputNilaiFE3" class="form-label">Kelengkapan CSS, Favicon, 404.html, Modal, Transisi, Loading, Responsive dan Hasil Analisis dari <a href="">gtmetrix.com</a></label>
-                        <input type="text" class="form-control" id="inputNilaiFE3" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                      </div>
-                      <!-- Memakai Custom Domain pada GitHub Pages nya. -->
-                      <div class="mb-3">
-                        <label for="inputNilaiFE4" class="form-label">Memakai Custom Domain pada GitHub Pages nya</label>
-                        <input type="text" class="form-control" id="inputNilaiFE4" placeholder="Inputkan Nilai dari Rentang 0 sampai 100">
-                      </div>
-                    <button type="submit" class="btn btn-primary">Ajukan Nilai</button>
-                  </form>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
+    </div>
+
     </div>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="../static/dosen/input_nilai_p3.js" type="module"></script>
